FMWK-617 Update documentation (#800)
---------
Co-authored-by: Ronen Botzer <rbotzer@aerospike.com>